syntax = "proto3";

option go_package = "./;rpc_service";

package rpc_service;

message UserRequest{
  string UserIds = 1;
}

message UserAccountRequest{
  string AccountIds = 1;
}


message UserResponse{
  int32 id = 1;
  string UserName = 2;
  string NickName = 3;
  string RealName = 4;
  string Gender = 5;
  string UserStatus = 6;
  int32 AccountId = 7;
}

message UserListResponse{
  repeated UserResponse userList = 1;
}

service UserService {
  rpc GetUserByIds(UserRequest) returns (UserListResponse);
  rpc GetUserByAccountIds(UserAccountRequest) returns (UserListResponse);
}